<resources>
    <string name="app_name">MeetJelly</string>
    <string name="login_title">Login First</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="name">Name</string>
    <string name="login">Log in</string>
    <string name="referral_code">Referral code</string>
    <string name="order">Order</string>
    <string name="var_chocolate">Chocolate</string>
    <string name="total_botol">Total/Bottle</string>
    <string name="var_green_tea">Green Tea</string>
    <string name="var_banana">Banana</string>
    <string name="variant">Variant</string>
    <string name="confirm">Confirm</string>
    <string name="order_code">Order code : </string>
    <string name="order_list">Order list</string>
    <string name="numberTable">No</string>
    <string name="pieceTable">pcs</string>
    <string name="total">total</string>
    <string name="next">Next</string>
    <string name="cancel">Cancel</string>
    <string name="total_price">Total Price </string>
    <string name="agreement">I agree the terms and conditions</string>
    <string name="clear_pad">Clear Pad</string>
    <string name="save_signature">Save Signature</string>
    <string name="register">Register</string>
    <string name="confirm_pwd">Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="sign_up">Sign up</string>
    <string name="my_reseller">My Reseller</string>
    <string name="order_date">Date of Order :</string>
    <string name="cash">Cash</string>
    <string name="transfer">Transfer</string>
    <string name="cash_info">We will deliver the order within 3 days, Thank you!</string>
    <string name="cash_info_title">Cash Payment Method</string>
    <string name="transfer_info_title">Transfer Payment Method</string>
    <string name="got_it">Got it</string>
    <string name="my_profile">My Profile</string>
    <string name="pwd_not_match">Both Password don\'t match</string>
    <string name="phone_required">Phone Number required</string>
    <string name="confirm_pwd_required">Confirm password required</string>
    <string name="email_required">Email Required</string>
    <string name="pwd_required">Password Required</string>
    <string name="name_required">Name required</string>
    <string name="account_created">Account Created!</string>
    <string name="thanks">Thank you for joining us</string>
    <string name="swipe_pic">Swipe the Picture</string>
    <string name="home">Home</string>
    <string name="notifications">Notifications</string>
    <string name="reseller">Reseller</string>
    <string name="agent">Agent</string>
    <string name="add_reseller">Add Reseller</string>
    <string name="this_is_home">This is Home</string>
    <string name="log_out">Log Out</string>
    <string name="exit">Exit</string>
    <string name="payment_list">Payment List</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="date_taken">Date Taken</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="send">Send</string>
    <string name="sign_here">Sign here</string>
    <string name="address">Address</string>
    <string name="update">Update</string>
    <string name="order_history">Order History</string>
    <string name="total_order">Total Order</string>
    <string name="bottle">bottle</string>
    <string name="date_taken_confirm">Date Taken :</string>
    <string name="confirmation">Confirmation</string>
    <string name="payment_instruction_line1">Transfer exactly all nominal values ​​listed below :</string>
    <string name="to_account_number">to Account number:</string>
    <string name="account_num">123-456-789-10</string>
    <string name="bank_company">Bank Mandiri</string>
    <string name="on_behalf_of_meet_jelly">On behalf of Meet Jelly</string>
    <string name="username">Username</string>
    <string name="username_required">Username Required</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="firstname_required">First Name required</string>
    <string name="lastname_required">Last Name required</string>
    <string name="confirm_exit">Confirm Exit</string>
    <string name="ays">Are you sure?</string>
    <string name="pressTwice">Press twice to exit</string>
    <string name="invalid_username_email">Invalid username or email</string>
    <string name="not_activated_email">Your email or username has not been activated</string>
    <string name="incorrect_pwd">Password incorrect</string>
    <string name="your_reseller">Your Reseller</string>
    <string name="create_account">Create Reseller Account</string>
    <string name="you_have_placed_an_order">You have placed an order :</string>
    <string name="no_order">No order</string>
    <string name="per_botol">Rp 5.500/Botol</string>
    <string name="bri_company">Bank BRI</string>
    <string name="help">Help</string>
    <string name="no_ktp">No KTP</string>
    <string name="reward">Reward</string>
    <string name="reward_period">Reward period</string>
    <string name="prize_notice">each agent will get a prize when reaching sales :</string>
    <string name="progress_bar">Progress Bar</string>
    <string name="transaction">Transaction :</string>
    <string name="time">Time :</string>
    <string name="done">Done</string>
    <string name="detail">Detail</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="date">date</string>
</resources>
