<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignatureActivity">

    <RelativeLayout
        android:id="@+id/signature_pad_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/buttons_container">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_above="@id/signature_pad_description"
            android:layout_marginBottom="8dp"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />
        
        <TextView
            android:id="@+id/signature_pad_description"
            android:layout_width="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp"
            android:text="@string/agreement"
            android:textColor="@android:color/darker_gray"
            android:layout_height="wrap_content" />

    <com.github.gcacace.signaturepad.views.SignaturePad
        android:id="@+id/signature_pad"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    </RelativeLayout>
    
    <LinearLayout
        android:id="@+id/buttons_container"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:paddingTop="16dp"
        android:layout_height="wrap_content">
        
        <Button
            android:id="@+id/clear_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/clear_pad"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/save_signature"
            android:layout_height="wrap_content" />
    </LinearLayout>

</RelativeLayout>