<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:gravity="center"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailOrderActivity">

    <ImageView
        android:id="@+id/imageVariant_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="12dp"
        android:background="@drawable/njlogopink" />

    <TextView
        android:id="@+id/variantName_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="15dp"
        android:text="@string/variant"
        android:textAllCaps="true"
        android:textColor="#BA000000" />

    <TextView
        android:id="@+id/variantPrice_detail"
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="Rp 0000,00"
        android:textColor="#BA000000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_margin="5dp"
                android:paddingLeft="1dp"
                android:text="@string/total_order"
                android:textColor="#BA000000" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center">

            <EditText
                android:id="@+id/orderSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/border_pink"
                android:gravity="center"
                android:inputType="number"
                android:textColor="#BA000000" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:paddingLeft="1dp"
                android:text="@string/bottle"
                android:textColor="#BA000000" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:onClick="DoneOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="100dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/mybutton"
        android:fontFamily="sans-serif"
        android:text="@string/done"
        android:textColor="#ffffff" />

</LinearLayout>