<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="3dp"
    android:clickable="true"
    android:foreground="@drawable/border_pink"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="sans-serif"
                android:text="@string/order_date"
                android:textSize="8pt"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/dateOrder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:textSize="8pt"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="sans-serif"
                android:text="@string/time"
                android:textSize="8pt"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:textSize="8pt"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="sans-serif"
                android:text="@string/transaction"
                android:textSize="8pt"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/transaction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:textSize="8pt"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="30dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="sans-serif"
                android:text="@string/total_price"
                android:textSize="8pt"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/totalPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:textSize="8pt"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>


</android.support.v7.widget.CardView>