<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_margin="50dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_gravity="top|center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="50dp"
            android:src="@drawable/njlogopink" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:textColorHint="#ba4b6c"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textColor="#3F111F"
                android:paddingLeft="10dp"
                android:hint="@string/email"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:textColorHint="#ba4b6c"
            app:passwordToggleTint="#ba4b6c"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#3F111F"
                android:paddingLeft="10dp"
                android:hint="@string/password"
                android:layout_marginBottom="10dp"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/login"
            android:onClick="login"
            android:layout_marginTop="30dp"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:fontFamily="sans-serif"
            android:textColor="#fcfdfc"
            android:background="@drawable/mybutton" />

        <TextView
            android:onClick="forgot"
            android:layout_width="285dp"
            android:text="Forgot Password?"
            android:textColor="#ba4b6c"
            android:textAlignment="center"
            android:layout_marginTop="15dp"
            android:textStyle="bold"
            android:layout_height="wrap_content" />

    </LinearLayout>
</LinearLayout>